--- a/pages/index/signup/signup.wxml
+++ b/pages/index/signup/signup.wxml
@@ -7,30 +7,35 @@
     </view>
     <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
         <view class="weui-media-box__title">尊敬的{{user.nickName}}{{user.gender==1 ? "先生":"女士"}}</view>
-        <view class="weui-media-box__desc">请检查或输入您的姓名，查询单位名称（新建单位），分享邀请下级单位负责人。</view>
+        <view class="weui-media-box__desc">请检查或输入您的姓名。</view>
     </view>
   </view>
 
   <template is="i_Name" data="{{...iName}}"></template>
-  <view id="0" class="weui-cells" hover="true" hover-class="weui-hover" hover-stay-time="500" bindtap="editenable">
-      <icon class="weui-icon" type="{{user.mobilePhoneVerified ? 'success' : 'warn'}}"/> 验证手机号{{user.mobilePhoneVerified ? '（可修改绑定手机号）' : '（无绑定手机号）'}}
-  </view>
-  <view class="weui-cells" hidden="{{ activeIndex != 0 }}">
-
-      <view hidden="{{!swcheck}}">显示下级店铺
-
+  <view wx:if="{{user.emailVerified}}">
+    <view id="0" class="weui-cells" hover="true" hover-class="weui-hover" hover-stay-time="500" bindtap="editenable">
+      <icon class="weui-icon" type="{{user.userRolName=='admin' ? 'success' : 'warn'}}"/>单位信息:
+    </view>
+    <view class="weui-cells" hidden="{{ activeIndex != 0 }}">
+      <view hidden="{{!swcheck}}">
+        <view wx:if="{{afamilys}}">类别：{{afamilys[aValue.afamily]}}</view>
+        <block class="weui-cell" wx:for="{{bsType}}" wx:key="{{index}}">
+          <template is="s_{{item.t}}" data="{{ p: item.p, c: aValue.dObject[item.gname] }}" />
+        </block>
       </view>
-  </view>
+    </view>
 
-  <view id="1" class="weui-cells" bindtap="editenable">
-      <icon class="weui-icon" type="{{user.mobilePhoneVerified ? 'info' : 'waiting'}}"/>{{cUnitInfo}}
-  </view>
-  <view class="weui-cells" hidden="{{ (activeIndex != 1) && (user.unit) }}">
-    <form bindsubmit="makeunit">
-      <block wx:for="{{reqData}}" wx:key="index">
-        <template is="i_{{item.t}}" data="{{...item}}"></template>
-      </block>
-      <button hidden="{{user.emailVerified}}" class="weui-btn" formType="submit">查询单位(存在可申请加入、不存在可创建)</button>
-    </form>
+    <view id="1" class="weui-cells" bindtap="editenable">
+        <icon class="weui-icon" type="{{user.userRolName=='admin' ? 'info' : 'waiting'}}"/>创建下级单位
+    </view>
+    <view class="weui-cells" hidden="{{ (activeIndex != 1) && (aValue.afamily<1) }}">
+      <form bindsubmit="makeunit">
+        <block wx:for="{{reqData}}" wx:key="index">
+          <template is="i_{{item.t}}" data="{{...item}}"></template>
+        </block>
+        <button class="weui-btn" formType="submit">创建单位</button>
+        <button class="weui-btn" open-type="share">邀请微信好友</button>
+      </form>
+    </view>
   </view>
 </view>
