--- a/pages/index/structure/structure.wxml
+++ b/pages/index/structure/structure.wxml
@@ -22,9 +22,7 @@
           <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
             <view class="weui-media-box__title">{{item.uName}}(呢称：{{item.nickName}})</view>
             <button id="mr_0" data-id="{{index}}" style="display:inline-block" size="mini" bindtap="fManageRole">解职</button>
-            <button id="mr_1" data-id="{{index}}" style="display:inline-block" size="mini" bindtap="fManageRole">入职</button>
             <button id="mr_c" data-id="{{item.objectId}}" style="display:inline-block" size="mini" bindtap="fChangeRole">调岗</button>
-            <view wx:if="{{enableApply}}">入职录入手机号</view>
             <picker disabled="{{crole[item.objectId]}}" mode="multiSelector" bindchange="rChange" bindcolumnchange="mColumnChange" value="{{mIndex}}" range="{{mRols}}">
               <button id="mr_1" data-id="{{index}}" bindtap="fManageRole">
                 选择调整为：{{mRols[0][mrrole[0]]}}，{{mRols[1][mrrole[1]]}}
@@ -34,5 +32,26 @@
         </view>
       </view>
     </block>
+    <view class="page__hd">
+      <view class="page__title"> 本岗位增加员工：</view>
+        <form wx:if="{{enableApply}}" bindsubmit="fSelApply">
+          <view class="weui-cell weui-cell_input weui-cell_vcode">
+              <view class="weui-cell__hd">
+                  <view class="weui-label">手机号找人</view>
+              </view>
+              <view class="weui-cell__bd">
+                  <input maxlength="11" name="inputmpn" value="{{phonen}}" placeholder="请输入手机号" />
+              </view>
+              <view class="weui-cell__ft">
+                  <button class="weui-btn" formType="submit">查找注册合伙人</button>
+              </view>
+          </view>
+        </form>
+        <view wx:if="{{applyUser}}" class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+          <image class="weui-media-box__thumb" src="{{applyUser.avatarUrl}}" background-size="cover"></image>
+          <view class="weui-media-box__title">{{applyUser.uName}}(呢称：{{applyUser.nickName}})</view>
+          <button style="display:inline-block" size="mini" bindtap="fManageApply">入职</button>
+        </view>
+    </view>
   </view>
 </view>
