--- a/libs/weui.wxss
+++ b/libs/weui.wxss
@@ -419,7 +419,7 @@ icon {
 }
 .weui-article__p {
   font-size: 28rpx;
-   width: 100%; 
+   width: 100%;
   height: 2.2em;
   margin: 0 0 .2em;
 }
@@ -630,6 +630,38 @@ icon {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+}
+.weui-tabbar {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  position: absolute;
+  z-index: 500;
+  bottom: 0;
+  width: 100%;
+  background-color: #F7F7FA;
+}
+.weui-tabbar__item {
+  display: block;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+          flex: 1;
+  padding: 5px 0 0;
+  font-size: 0;
+  color: #999999;
+  text-align: center;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+.weui-tabbar__icon {
+  display: inline-block;
+  width: 160rpx;
+  height: 160rpx;
+}
+.weui-tabbar__label {
+  text-align: center;
+  color: #999999;
+  font-size: 26rpx;
+  line-height: 1.8;
 }
 .weui-table {
   border: 0px solid darkgray;
