--- a/pages/production/production.wxml
+++ b/pages/production/production.wxml
@@ -18,5 +18,5 @@
     <template is="tabsCk" data="{{ fLength , pageCk , tabs ,wWidth }}"/>
     <template is="tabPanel" data="{{ tPage: fLength ? mPage[pageCk] : mPage , pageData , pNo }}"/>
   </view>
-  <template is="tabBar" data="{{tabBar,pName}}" />
+  <template is="tabBar" data="{{isWorker,tabBar,pName}}" />
 </view>
