--- a/libs/weimport.wxml
+++ b/libs/weimport.wxml
@@ -4,19 +4,19 @@
 <wxs src="weimport.wxs" module="wewxs" />
 
 <template name="tabBar">
-  <view wx:if="{{isWorker}}" class="weui-tabbar">
+  <view wx:if="{{isWorker}}" class="weui-footer_fixed-bottom weui-tabbars">
     <block wx:for="{{tabBar}}" wx:key="{{index}}" wx:for-item="tb">
-      <navigator url="/pages/{{tb.pName}}/{{tb.pName}}" open-type="switchTab" hover-class="other-navigator-hover">
+      <view class="weui-tabbar">
+      <navigator url="/pages/{{tb.pName}}/{{tb.pName}}" open-type="redirectTo" hover-class="other-navigator-hover">
         <view id="tabar{{index}}" class="weui-tabbar__item {{pName==tb.pName ? 'weui-navbar__item.weui-bar__item_on' : ''}}">
-          <view class="weui-tabbar__icon">
-            <image src="../../images/icon_{{tb.pName}}.png"/>
-          </view>
+            <image class="weui-tabbar__icon" src="../../images/icon_{{tb.pName}}.png"/>
           <view wx:if="{{tb.sams>0}}">
             <span class="weui-badge" style="position: absolute;top: -.4em;right: 1em;">tb.sams</span>
           </view>
           <view class="weui-tabbar__label">{{tb.cName}}</view>
         </view>
       </navigator>
+      </view>
     </block>
   </view>
 </template>
@@ -459,7 +459,7 @@
 <template name="tabPanel">
 <view class="weui-tab__panel">
   <block wx:for="{{tPage}}" wx:key="{{index}}">
-    <navigator url="/page/vprocedure/vprocedure?pNo={{pNo}}&artId={{item.objectId}}">
+    <navigator url="/pages/vprocedure/vprocedure?pNo={{pNo}}&artId={{item.objectId}}">
       <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
         <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
           <image class="weui-media-box__thumb" src="{{pageData[item.objectId].thumbnail}}" background-size="cover"></image>
