--- a/pages/customer/customer.wxml
+++ b/pages/customer/customer.wxml
@@ -30,5 +30,5 @@
         </view>
     </view>
   </scroll-view>
-  <template is="tabBar" data="{{tabBar,pName}}" />
+  <template is="tabBar" data="{{isWorker,tabBar,pName}}" />
 </view>
