--- a/libs/weui.wxss
+++ b/libs/weui.wxss
@@ -642,23 +642,28 @@ icon {
 .weui-tabbar {
   position: relative;
   float: left;
-  padding: 6rpx 2rpx;
-  width: 20%;
-  box-sizing: border-box;
-  border-right: 1rpx solid #D9D9D9;
-  border-bottom: 1rpx solid #D9D9D9;
+  padding: 8rpx 2rpx 2rpx;
+  width: 130rpx;
+  text-align: center;
+  margin: auto;
+  line-height: 32rpx;
+  height: 120rpx;
+  border-radius: 2rpx;
+  box-shadow: 0 0 0 8rpx #0033FF,1rpx 1rpx 1rpx 9rpx #0033FE,2rpx 2rpx 2rpx 10rpx #0033FD,3rpx 3rpx 3rpx 11rpx #0033FC,4rpx 4rpx 4rpx 12rpx #0033FB;
   background-color: #F7F7FA;
 }
 .weui-tabbar__item {
-  display: block;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-          flex: 1;
-  padding: 5px 0 0;
-  font-size: 0;
-  color: #999999;
+  position: relative;
+  float: left;
+  padding: 10rpx 2rpx 4rpx;
+  width: 130rpx;
   text-align: center;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  margin: auto;
+  line-height: 36rpx;
+  height: 120rpx;
+  border-radius: 2rpx;
+  box-shadow: 0 0 0 8rpx rebeccapurple;
+  background-color: #999999;
 }
 .weui-tabbar__icon {
   display: inline-block;
@@ -669,7 +674,7 @@ icon {
   text-align: center;
   color: #999999;
   font-size: 26rpx;
-  line-height: 1.8;
+  /* line-height: 0.8; */
 }
 .weui-table {
   border: 0px solid darkgray;
@@ -878,7 +883,7 @@ icon {
   text-align: center;
   font-size: 0;
 }
-.weui-navbar__item.weui-bar__item_on {
+.weui-bar__item_on {
   color: #1AAD19;
 }
 .weui-navbar__slider {
