--- a/libs/weui.wxss
+++ b/libs/weui.wxss
@@ -599,7 +599,7 @@ icon {
   font-size: 24rpx;
 }
 .weui-grids {
-  border-top: 1rpx solid #D9D9D9;
+
   border-left: 1rpx solid #D9D9D9;
   overflow: hidden;
 }
@@ -609,6 +609,7 @@ icon {
   padding: 6rpx 2rpx;
   width: 20%;
   box-sizing: border-box;
+  border-top: 1rpx solid #D9D9D9;
   border-right: 1rpx solid #D9D9D9;
   border-bottom: 1rpx solid #D9D9D9;
 }
@@ -637,33 +638,34 @@ icon {
   display: flex;
   z-index: 500;
   bottom: 0;
-  background-color: #F7F7FA;
+  height: 110rpx;
+  border-top: 1rpx solid #D9D9D9;
+  border-bottom: 1rpx solid #D9D9D9;
 }
 .weui-tabbar {
   position: relative;
   float: left;
-  padding: 8rpx 2rpx 2rpx;
-  width: 130rpx;
+  padding: 4rpx 2rpx 2rpx;
+  width: 140rpx;
   text-align: center;
   margin: auto;
   line-height: 32rpx;
-  height: 120rpx;
   border-radius: 2rpx;
-  box-shadow: 0 0 0 8rpx #0033FF,1rpx 1rpx 1rpx 9rpx #0033FE,2rpx 2rpx 2rpx 10rpx #0033FD,3rpx 3rpx 3rpx 11rpx #0033FC,4rpx 4rpx 4rpx 12rpx #0033FB;
+  box-shadow: 0 0 0 8rpx #F6F6F6;
   background-color: #F7F7FA;
 }
 .weui-tabbar__item {
   position: relative;
   float: left;
-  padding: 10rpx 2rpx 4rpx;
-  width: 130rpx;
+  padding: 6rpx 2rpx 4rpx;
+  width: 140rpx;
   text-align: center;
   margin: auto;
-  line-height: 36rpx;
-  height: 120rpx;
+  line-height: 34rpx;
+  
   border-radius: 2rpx;
-  box-shadow: 0 0 0 8rpx rebeccapurple;
-  background-color: #999999;
+  box-shadow: 0 0 0 8rpx #E5E7EB;
+  background-color: #E5E7EB;
 }
 .weui-tabbar__icon {
   display: inline-block;
@@ -672,7 +674,7 @@ icon {
 }
 .weui-tabbar__label {
   text-align: center;
-  color: #999999;
+  color: #3F3F3F;
   font-size: 26rpx;
   /* line-height: 0.8; */
 }
