--- a/libs/weimport.wxml
+++ b/libs/weimport.wxml
@@ -5,6 +5,29 @@
 <wxs src="assc.wxs" module="assclist" />
 <wxs src="weimport.wxs" module="wewxs" />
 
+<template name="tabBar">
+  <view wx:if="{{isWorker}}" class="weui-footer_fixed-bottom weui-tabbars">
+    <block wx:for="{{tabBar}}" wx:key="{{index}}" wx:for-item="tb">
+      <view wx:if="{{pName==tb.pName}}" class="weui-tabbar__item">
+        <image class="weui-tabbar__icon" src="../../images/{{tb.pName}}.png"/>
+        <view wx:if="{{tb.sams>0}}">
+          <span class="weui-badge" style="position: absolute;top: -.4em;right: 1em;">{{tb.sams}}</span>
+        </view>
+        <view class="weui-tabbar__label" style="color:green;">{{tb.cName}}</view>
+      </view>
+      <view wx:else class="weui-tabbar">
+        <navigator url="/pages/{{tb.pName}}/{{tb.pName}}" open-type="redirectTo" hover-class="other-navigator-hover">
+          <image class="weui-tabbar__icon" src="../../images/{{tb.pName}}.png"/>
+          <view wx:if="{{tb.sams>0}}">
+            <span class="weui-badge" style="position: absolute;top: -.4em;right: 1em;">{{tb.sams}}</span>
+          </view>
+          <view class="weui-tabbar__label">{{tb.cName}}</view>
+        </navigator>
+      </view>
+    </block>
+  </view>
+</template>
+
 <template name="s_p">
   <view class="weui-cells__title">{{p}}:</view>
   <view class="weui-cells weui-cells_after-title">
