--- a/index/shops/shops.wxml
+++ b/index/shops/shops.wxml
@@ -13,9 +13,30 @@
     </swiper>
 	</view>
 
+
+
   <view class="page__bd">
     <template is="showgrids" data="{{grids}}"/>
   </view>
+     
+
+   <view class="container-goods">
+<view class="page__bd">
+    <view class="weui-grids">
+    <text class="caption">产品精选</text>
+  <view class="main-goods">
+    <view class="single-goods" wx:for="{{goods}}" wx:key="" bindtap="showDetail" data-index="{{index}}">
+      <image class="avatar" src="{{item.avatar}}" mode="aspectFill" />
+      <text class="title">{{item.title}}</text>
+      <view class="summary">
+				<text class="price">￥{{item.price}}</text>
+        </view>
+         </view>
+       </view>
+      </view> 
+    </view>   
+    </view>
+    
   <view class="weui-tab">
     <template is="tabPanel" data="{{ tPage: mPage , pageData , pNo }}"/>
   </view>
