--- a/pages/shops/category/category.wxss
+++ b/pages/shops/category/category.wxss
@@ -1,5 +1,5 @@
 page {
-	background-color: #f3f5f7;
+	background-color: #fff;
 }
 
 /*容器总体布局为左右两列*/
@@ -17,7 +17,7 @@ page {
 /*text块状布局独占一行*/
 .sidebar text {
 	display: block;
-	border: 1px solid #e5e5e5;
+	border: 2px solid #e5e5e5;
 	border-top: 0;
 	height: 40px;
 	line-height: 40px;
