--- a/app.wxss
+++ b/app.wxss
@@ -43,3 +43,201 @@ page{
     text-align: left;
     font-size: 28rpx;
 }
+.buy{
+ 	float: right;
+	border: 0;
+	line-height: 100rpx;
+	text-align: center;
+	width: 350rpx;
+	height: 100rpx;
+	background-color: #f60;
+	color: white;
+	font-size: 36rpx;
+	border-radius: 0px;
+}
+.give{
+   	float: right;
+	border: 0;
+	line-height: 100rpx;
+	text-align: center;
+	width: 350rpx;
+	height: 100rpx;
+	background-color: red;
+	color: white;
+	font-size: 36rpx;
+	border-radius: 0px;
+}
+
+/*购物车按钮、收藏等*/
+.opt-buttons {
+	width: 100%;
+	display: flex;
+	flex-direction: row-reverse;
+	justify-content: space-around;
+}
+
+/*cart*/
+.button-group {
+	display: flex;
+	flex-direction: column;
+}
+
+.button-image {
+	width: 60rpx;
+	height: 60rpx;
+  margin-left: 15rpx
+}
+
+.button-text {
+	font-size: 24rpx;
+	line-height: 40rpx;
+}
+
+
+
+.drawer_screen {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000;
+  opacity: 0.2;
+  overflow: hidden;
+  z-index: 1000;
+  color: #fff;
+}
+
+.drawer_attr_box {
+  width: 100%;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 2000;
+  background: #fff;
+}
+
+.close_icon {
+  width: 25rpx;
+  height: 25rpx;
+  line-height: 20rpx;
+  font-size: 30rpx;
+  position: absolute;
+  right: 5rpx;
+  top:5rpx;
+  padding: 10rpx;
+  color: #ccc;
+  border: 1rpx solid #ccc;
+  border-radius: 50%;
+  text-align: center;
+  background: #fff;
+}
+
+.drawer_attr_content {
+  padding: 20rpx;
+  height: 600rpx;
+  overflow-y: scroll;
+}
+
+.drawer_amount{
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 30rpx;
+}
+
+.drawer_standard{
+  display: block;
+	border: 1px solid #e5e5e5;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	color: #232626;
+	font-size: 14px;
+	background-color: #f9f9f9;
+}
+
+.drawer_btn {
+  width: 100%;
+  border-radius: 10rpx;
+  text-align: center;
+  background: red;
+  color: #fff;
+}
+
+
+.buy_screen {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000;
+  opacity: 0.2;
+  overflow: hidden;
+  z-index: 1000;
+  color: #fff;
+}
+
+.buy_attr_box {
+  width: 100%;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 2000;
+  background: #fff;
+}
+
+.close_icon {
+  width: 25rpx;
+  height: 25rpx;
+  line-height: 20rpx;
+  font-size: 30rpx;
+  position: absolute;
+  right: 5rpx;
+  top:5rpx;
+  padding: 10rpx;
+  color: #ccc;
+  border: 1rpx solid #ccc;
+  border-radius: 50%;
+  text-align: center;
+  background: #fff;
+}
+
+.buy_attr_content {
+  padding: 20rpx;
+  height: 600rpx;
+  overflow-y: scroll;
+}
+
+.buy_amount{
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 30rpx;
+}
+
+.buy_standard{
+  display: block;
+	border: 1px solid #e5e5e5;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	color: #232626;
+	font-size: 14px;
+	background-color: #f9f9f9;
+}
+
+.buy_btn {
+  width: 100%;
+  border-radius: 10rpx;
+  text-align: center;
+  background: red;
+  color: #fff;
+}
+
+.highlight {
+	background-color: #f3f5f7;
+	color: #f23131;
+	border-right: 1rpx;
+}
