--- a/pages/vprocedure/vprocedure.wxml
+++ b/pages/vprocedure/vprocedure.wxml
@@ -2,7 +2,7 @@
 <view class="page" id="approval-{{pNo}}">
   <view class="page__bd page__ac_spacing">
     <block wx:for="{{reqData}}" wx:key="index">
-      <template is="s_{{item.t}}" data="{{...item, c:viewData[item.gname]}}"></template>
+      <template is="s_{{item.t}}" data="{{...item, c:vData[item.gname]}}"></template>
     </block>
   </view>
   <view wx:if="{{pno=='goods'}}">
@@ -20,29 +20,30 @@
         <button class="give" bindtap="giveshowModal">赠送</button>
       </view>
     </view>
-  </view>
-  <view wx:if="{{buyshowModalStatus}}" class="buy_screen">
-    <view class="buy_attr_box">
-      <view class="close_icon" bindtap="hideModal">×</view>
-      <view class="buy_attr_content" >
-        <view class="buy_amount">{{amount}}元</view>
-        <view class='buy_standard' wx:for="{{standard}}" bindtap="buyprice" wx:key="" data-index="{{index}}">
-          <scroll-view class="{{highlight[index]}}">{{item.standard}}</scroll-view>
+
+    <view wx:if="{{buyshowModalStatus}}" class="buy_screen">
+      <view class="buy_attr_box">
+        <view class="close_icon" bindtap="hideModal">×</view>
+        <view class="buy_attr_content" >
+          <view class="buy_amount">{{amount}}元</view>
+          <view class='buy_standard' wx:for="{{standard}}" bindtap="buyprice" wx:key="" data-index="{{index}}">
+            <scroll-view class="{{highlight[index]}}">{{item.standard}}</scroll-view>
+          </view>
         </view>
+        <button class="buy_btn" bindtap="buy">确定购买</button>
       </view>
-      <button class="buy_btn" bindtap="buy">确定购买</button>
     </view>
-  </view>
-  <view wx:if="{{giveshowModalStatus}}" class="drawer_screen">
-    <view class="drawer_attr_box">
-      <view class="close_icon" bindtap="hideModal">×</view>
-      <view class="drawer_attr_content" >
-        <view class="drawer_amount">{{amount}}元</view>
-        <view class='drawer_standard' wx:for="{{standard}}" bindtap="giveprice" wx:key="" data-index="{{index}}">
-          <scroll-view class="{{highlight[index]}}">{{item.standard}}</scroll-view>
+    <view wx:if="{{giveshowModalStatus}}" class="drawer_screen">
+      <view class="drawer_attr_box">
+        <view class="close_icon" bindtap="hideModal">×</view>
+        <view class="drawer_attr_content" >
+          <view class="drawer_amount">{{amount}}元</view>
+          <view class='drawer_standard' wx:for="{{standard}}" bindtap="giveprice" wx:key="" data-index="{{index}}">
+            <scroll-view class="{{highlight[index]}}">{{item.standard}}</scroll-view>
+          </view>
         </view>
+        <button class="drawer_btn" bindtap="give">确定赠送</button>
       </view>
-      <button class="drawer_btn" bindtap="give">确定赠送</button>
     </view>
   </view>
   <view wx:else>
